refactor : separate convert login
- dto로 변환하는 로직을, mapper 클래스로 분리하여, 중복되는 코드를 줄여 가독성을 높인다.