@@ -1,12 +1,12 @@
 package com.example.univeus.domain.meeting.service;
 
+import static com.example.univeus.presentation.meeting.dto.response.MainPageResponse.*;
+
 import com.example.univeus.domain.meeting.model.MeetingCategory;
 import com.example.univeus.domain.meeting.model.MeetingPost;
 import com.example.univeus.domain.meeting.repository.MeetingPostRepository;
-import com.example.univeus.domain.member.model.Member;
-import com.example.univeus.presentation.meeting.dto.response.MainPageResponse;
+import com.example.univeus.domain.meeting.service.dto.mapper.MainPageMapper;
 import com.example.univeus.presentation.meeting.dto.response.MainPageResponse.MainPageDetail;
-import com.example.univeus.presentation.member.dto.request.MemberDto.Profile;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -21,69 +21,33 @@ public class MainPageServiceImpl implements MainPageService {
     private final MeetingPostRepository meetingPostRepository;
 
     @Override
-    public MainPageResponse.MainPage getMainPage(Long cursor, MeetingCategory meetingCategory) {
+    public MainPage getMainPage(Long cursor, MeetingCategory meetingCategory) {
         Pageable pageable = PageRequest.of(0, SIZE); // 페이지 크기만 지정
         List<MeetingPost> meetingPosts = meetingPostRepository.findByCategoryAndOptionalCursor(meetingCategory,
                 cursor,
                 pageable);
 
-        List<MainPageDetail> mainPages = meetingPosts.stream().map(meetingPost -> {
-            Member writer = meetingPost.getWriter();
-            Profile profile = Profile.of(
-                    writer.getNickname(), writer.getDepartment().getDepartment(),
-                    writer.getGender().getGender(), writer.getStudentId());
-
-            return new MainPageDetail(
-                    meetingPost.getTitle(),
-                    meetingPost.getJoinLimit(),
-                    meetingPost.getMeetingPostStatus(),
-                    meetingPost.getGenderLimit().getGender(),
-                    meetingPost.getPostDeadLine().getPostDeadline(),
-                    meetingPost.getMeetingSchedule().getMeetingSchedule(),
-                    meetingPost.getMeetingCategory(),
-                    profile);
-        }).toList();
+        List<MainPageDetail> mainPages = meetingPosts.stream().map(MainPageMapper::toMainPageDetail).toList();
 
         if (meetingPosts.isEmpty()) {
-            return new MainPageResponse.MainPage(mainPages, "NONE", false);
+            return new MainPage(mainPages, "NONE", false);
         }
 
-        String nextCursor = meetingPosts.getLast().getId().toString();
-        return new MainPageResponse.MainPage(mainPages, nextCursor, true);
+        String nextCursor = meetingPosts.get(meetingPosts.size() - 1).toString();
+        return new MainPage(mainPages, nextCursor, true);
     }
 
     @Override
-    public MainPageResponse.MainPage getMainPageOffset(String category, int page) {
+    public MainPage getMainPageOffset(String category, int page) {
         Pageable pageable = PageRequest.of(page, SIZE);
         MeetingCategory meetingCategory = (!category.equals("none")) ? MeetingCategory.of(category) : null;
 
         Page<MeetingPost> meetingPostPage = meetingPostRepository.findByCategoryAndOffset(meetingCategory, pageable);
-
-        List<MainPageResponse.MainPageDetail> result = meetingPostPage.getContent().stream().map(meetingPost -> {
-
-            Member writer = meetingPost.getWriter();
-            Profile profile = Profile.of(
-                    writer.getNickname(),
-                    writer.getDepartment().getDepartment(),
-                    writer.getGender().getGender(),
-                    writer.getStudentId()
-            );
-
-            return new MainPageResponse.MainPageDetail(
-                    meetingPost.getTitle(),
-                    meetingPost.getJoinLimit(),
-                    meetingPost.getMeetingPostStatus(),
-                    meetingPost.getGenderLimit().getGender(),
-                    meetingPost.getPostDeadLine().getPostDeadline(),
-                    meetingPost.getMeetingSchedule().getMeetingSchedule(),
-                    meetingPost.getMeetingCategory(),
-                    profile
-            );
-        }).toList();
+        List<MainPageDetail> mainPages = meetingPostPage.stream().map(MainPageMapper::toMainPageDetail).toList();
 
         boolean hasNext = meetingPostPage.hasNext();
         int nextPage = hasNext ? page + 1 : -1;
 
-        return new MainPageResponse.MainPage(result, String.valueOf(nextPage), hasNext);
+        return new MainPage(mainPages, String.valueOf(nextPage), hasNext);
     }
 }
